# distinct-words

./: CMakeLists.txt  README.md  main.cc  reader.cc  words_counter.cc  words_counter.h
include/: ireader_delegate.h  reader.h  thread_safe_string_queue.h  words_counter.h
src/: main.cc  reader.cc  thread_safe_string_queue.cc  words_counter.cc
support/: multiplicator.py
